k8s/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-deployment
spec:
  selector:
    matchLabels:
      component: web
  template:
    metadata:
      labels:
        component: web
    spec:
      containers:
        - name: django
          image: shaggydog/gamedb:latest
          imagePullPolicy: Always
          command: ["./manage.py", "runserver", "0.0.0.0:8000"]
          ports:
            - containerPort: 8000
