k8s/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-service
spec:
  selector:
    component: web
  ports:
    - port: 8000
      targetPort: 8000
