k8s/gamedb-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gamedb-ingress
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: web-service
              servicePort: 8000
